<resources>
    <string name="app_name">StoryApp -Risnanto73</string>
    <string name="register">Register</string>
    <string name="filled">Fill all the field with correctly</string>
    <string name="login">Login</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="must_filled">Must be filled</string>
    <string name="invalid_password">Password must be >7 characters</string>
    <string name="change_language">Change Language</string>
    <string name="app_verison">Story App V2</string>
    <string name="logout">logout</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="looks_like_you_haven_t_read_any_stories_yet">Looks like you haven\'t read any stories yet</string>
    <string name="greeting">Hi %1$s,</string>
    <string name="information">Information</string>
    <string name="logout_success">Logout success</string>
    <string name="image_strory">Image Strory</string>
    <string name="image_name">Image Name</string>
    <string name="description">Description</string>
    <string name="created_at">Created at</string>
    <string name="list_story">list Story</string>
    <string name="post_sorty">post sorty</string>
    <string name="no_story_found">no story found</string>
    <string name="sign_in">Sign In</string>
    <string name="input_email">input email</string>
    <string name="input_password">input password</string>
    <string name="login_button">Login Button</string>
    <string name="dont_have_account">dont have account ?</string>
    <string name="login_success">Login success</string>
    <string name="register_success">Register success</string>
    <string name="register_failed">Register failed</string>
    <string name="login_failed">Login failed</string>
    <string name="input_name">input name</string>
    <string name="have_an_account_sign_in">Have an account? Sign in</string>
    <string name="new_stories">New Stories</string>
    <string name="image_preview">Image Preview</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="capture_image">capture image</string>
    <string name="switch_camera">switch camera</string>
    <string name="upload_success">upload success</string>
    <string name="upload_failed">upload failed</string>
    <string name="no_attach_file">no attach file</string>
    <string name="error">must be filled</string>
    <string name="share_my_location">Share My Location</string>
    <string name="enable_gps_permission">Please allowed your location services</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="error_occurred">Some Error Occurred</string>
    <string name="retry">Retry</string>
    <string name="something_wrong">something wrong</string>
    <string name="choosepicture">Choose a Picture</string>
    <string name="back">back</string>
    <string name="back_success">Back Success</string>
    <string name="detail_title"> Details Stories</string>
    <string name="name">Name :</string>
    <string name="settings">Setting</string>
    <string name="created">Created by</string>

</resources>
