<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_setting"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/change_language"
        android:src="@drawable/ic_baseline_settings_24" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_name"
            android:src="@drawable/ic_baseline_library_books_24" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/sign_in"
            android:textSize="30sp" />

        <com.tiorisnanto.storyapp_risnanto73.cutomview.MyEditTextEmail
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="16sp"
            android:paddingEnd="16sp" />

        <com.tiorisnanto.storyapp_risnanto73.cutomview.MyEditTextPassword
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            app:passwordToggleEnabled="true" />

        <com.tiorisnanto.storyapp_risnanto73.cutomview.MyButtonLogin
            android:id="@+id/btn_signIn"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:alpha="0"
            android:contentDescription="@string/login_button" />

        <TextView
            android:id="@+id/et_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:alpha="0"
            android:text="@string/dont_have_account"
            android:textColor="@color/green_300"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>